feat: agregar entidad ciudades, seeder, script de reinicio de BD y actualización de swagger
